# resistics

./: .coveragerc  .darglint  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BACKLOG.rst  CHANGELOG.rst  CHANGELOG.txt  LICENCE.txt  MANIFEST.in  README.md  mypy.ini  noxfile.py  pyproject.toml  setup.py
.github/workflows/: codeql.yml  commit_flow.yml  python-package.yml  python-publish.yml
cookbook/usingAscii/: asciiPrepare.py  asciiconfig.ini  createProject.py  datapaths.py  docprepare.py  runDefault.py  runWithConfig.py  runWithStatistics.py  simpleRun.py
cookbook/usingLemiB423/: createProject.py  datapaths.py  docprepare.py  process.py  processConfig.py
data/: README.md
data/calibration/: example.json  example.txt
data/config/: .gitignore
docs/: conventions.txt  requirements.txt
docs/source/: advanced.rst  api.rst  bibliography.rst  calculators.calculator.rst  calculators.calibrator.rst  calculators.decimationParameters.rst  calculators.decimator.rst  calculators.processorRemoteReference.rst  calculators.processorSingleSite.rst  calculators.rst  calculators.statisticCalculator.rst  calculators.windower.rst  case-studies.rst  changelog.rst  conf.py  consultancy.rst  contact.rst  conventions.rst  cookbook.rst  credits.rst  custom-process.rst  dataObjects.dataObject.rst  dataObjects.projectData.rst  dataObjects.spectrumData.rst  dataObjects.timeData.rst  donate.rst  features.rst  formats.rst  getting-started.rst  index.rst  installation.rst  introduction.rst  ioHandlers.dataReaderATS.rst  ioHandlers.dataReaderAscii.rst  ioHandlers.dataReaderInternal.rst  ioHandlers.dataWriterInternal.rst  ioHandlers.maskIO.rst  ioHandlers.rst  ioHandlers.spectrumWriter.rst  ioHandlers.transferFunctionReader.rst  (+38 more)
examples/: advanced03_mask.py  ex0_statisticExamples.py  ex1_createProject.py  ex1_loadProject.py  ex1_multipleSpectra.py  ex1_simpleRunWithTipper.py  ex1_usingMasks.py  ex1_viewSpectra.py  ex1_viewTime.py  ex2_00_createProject.py  ex2_02_remoteReferenceRun.py  ex2_03_multipleSpectra.py  ex2_05_remoteReferenceStatistics.py
examples/advanced/: configuration.py  createProject.py  datapaths.py  docprepare.py  interpolationResample.py  intersite.bat  intersiteCreate.py  intersiteRun.py  manualWindowsConfig.ini  multipleSpectra.py  preprocess.bat  preprocessCreate.py  preprocessFilter.py  preprocessGapFill.py  preprocessInterpolate.py  preprocessMath.py  preprocessResample.py  remote.bat  remoteCreate.py  remoteHighFreq.py  remoteManualWindows.py  remoteMasks.py  remotePreprocess.py  remoteReferenceRun.py  remoteRun.py  remoteStatistics.py  remoteWithConfig.py  resampleInterpolate.py  usingStatistics.py
examples/config/: README.rst  eg_01_default_config.py  eg_02_custom_config.py  eg_02_customising_config.py  eg_03_quick_configuration.py  eg_04_project_configuration.py  eg_05_transfer_functions.py
examples/conventions/: asciiReaderExamples.py  atsReaderExamples.py  calibrationInductionExample.py  calibrationMetronixExample.py  calibrationRSPExample.py  calibrationRSPXExample.py  calibrationViewExamples.py  internalReaderExamples.py  interpolationToSecond.py  phoenixReaderExamples.py  spamReaderExamples.py
examples/datatypes/: README.rst  eg_01_time_data.py
examples/features/: calculateStatistics.py  copyconfig.py  createProject.py  datapaths.py  docprepare.py  exampleConfig1.ini  exampleConfig2.ini  remoteStatisticExamples.py  resisticsDefaultConfig.ini  statisticExamples.py
examples/formats/: asciiReaderExamples.py  atsReaderExamples.py  calibrationInductionExample.py  calibrationMetronixExample.py  calibrationRSPExample.py  calibrationRSPXExample.py  datapaths.py  docprepare.py  internalReaderExamples.py  interpolationToSecond.py  lemiB423EReaderExample.py  lemiB423EReaderExamples.py  lemiB423ReaderExample.py  lemiB423ReaderExamples.py  phoenixReaderExamples.py  spamReaderExamples.py
examples/project/: README.rst  eg_01_a_new_project.py  eg_02_navigating_a_project.py  eg_03_processing.py  eg_04_calibration_files.py  eg_04_remote_reference.py  eg_07_intersite_processing.py  eg_08_remote_and_intersite.py
examples/quick/: README.rst  eg_01_quick_read.py  eg_02_quick_view.py  eg_03_quick_spectra.py  eg_04_quick_tf.py  plot_01_quick_read.py  plot_04_quick_tf_test.py  plot_quick_spectra.py  plot_quick_tf.py  plot_quick_view.py
examples/read/: README.rst  eg_01_read_time_ascii.py  eg_02_read_time_bz2.py  eg_03_read_time_binary.py  eg_04_read_calibration_json.py  eg_05_read_calibration_txt.py  plot_01_read_time_ascii samtex.py  plot_read_calibration_json.py  plot_read_calibration_txt.py  plot_read_time_ascii.py  plot_read_time_numpy.py
examples/tutorial/: createProject.py  datapaths.py  datetimeConstraints.py  docprepare.py  loadProject.py  masksAndStatistics.py  multiProc.py  multiconfigSeparate.ini  multipleSpectra.py  multiprocessing.py  runWithMasks.py  simpleRun.py  simpleRunWithTipper.py  tutorialconfig.ini  usingConfigFiles.py  usingMasks.py  usingStatistics.py  usingWindowSelector.py  viewSpectra.py  viewTime.py
examples/usingAscii/: createProject.py  runWithConfig.py  simpleRun.py
notebooks/: check_project_single.ipynb  check_standalone_single.ipynb  check_standalone_target_windows.ipynb  make_testing_data.ipynb
resistics/: __init__.py  calibrate.py  common.py  config.py  decimate.py  errors.py  gather.py  interface.py  letsgo.py  log.py  math.py  plot.py  project.py  regression.py  resisticsConfig.ini  sampling.py  spectra.py  testing.py  time.py  transfunc.py  window.py
resistics/calibrate/: data.py  (+4 more)
tests/: 0_testsProject.py  1_testsDataReader.py  2_testsSignalProcess.py  3_testsSpectraCalc.py  4_testsWindowDecimate.py  5_testsStats.py  7_testsProcess.py  8_testsTransferFunction.py  basic_Coherency.py  basic_Robust.py  basic_StatsModel.py  dataset_testing.py  test.py  test_calibrate.py  test_common.py  test_config.py  test_errors.py  test_gather.py  test_letsgo.py  test_math.py  test_plot.py  test_project.py  test_regression.py  test_sampling.py  test_time.py  testing_data_evals.py  testing_data_spectra.py  testsPhoenixReader.py
(+581 files in other folders)
