[tool.poetry]
name = "resistics"
version = "1.0.0-alpha.2"
description = "Python package for processing magnetotelluric data"
license = "MIT"
authors = ["Neeraj Shah <resistics@outlook.com>"]
maintainers = ["Neeraj Shah <resistics@outlook.com>"]
readme="README.md"
homepage="https://www.resistics.io"
repository="https://github.com/resistics/resistics"
documentation="https://www.resistics.io"
keywords=[
    "geophysics",
    "magnetotellurics",
    "electromagnetic",
    "resistivity",
    "statistics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
]

[tool.poetry.urls]
"Source" = "https://github.com/resistics/resistics"
"Bug Tracker" = "https://github.com/resistics/resistics/issues"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.10"
numpy = "^1.20.2"
scipy = "^1.6.2"
pandas = "^1.2.3"
lttbc = "^0.2.0"
attotime = "0.2.3"
plotly = "^4.14.3"
loguru = "^0.5.3"
scikit-learn = "^0.24.2"
pydantic = "^1.8.1"
prettyprinter = "^0.18.0"
PyYAML = "^5.4.1"
tqdm = "^4.61.0"

[tool.poetry.dev-dependencies]
matplotlib="^3.4.1"
Sphinx = "^4.0.0"
furo="^2021.4.11b34"
pytest="^6.2.3"
pytest-cov="^2.11.1"
pytest-html="^3.1.1"
mypy="^0.812"
darglint="^1.8.0"
flake8="^3.9.0"
black="^20.8b1"
pre-commit="^2.12.0"
autodoc-pydantic = "^1.1.2"
sphinx-copybutton = "^0.3.1"
flake8-builtins = "^1.5.3"
flake8-docstrings = "^1.6.0"
flake8-bandit = "^2.1.2"
flake8-pytest-style = "^1.4.2"
flake8-cognitive-complexity = "^0.1.0"
flake8-expression-complexity = "^0.0.9"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
minversion = "6.0"
testpaths = ["resistics", "tests"]

[tool.coverage.paths]
source = ["resistics"]

[tool.coverage.run]
branch = true
source = ["resistics"]

[tool.coverage.report]
show_missing = false

[tool.coverage.html]
directory = "artifacts/coverage_html"

[tool.coverage.xml]
output = "coverage.xml"

[tool.black]
line-length = 88
target-version = ["py38"]
