[tool.poetry]
name = "resistics"
version = "1.0.0-alpha.3"
description = "Python package for processing magnetotelluric data"
license = "MIT"
authors = ["Neeraj Shah <resistics@outlook.com>"]
maintainers = ["Neeraj Shah <resistics@outlook.com>"]
readme = "README.md"
homepage = "https://www.resistics.io"
repository = "https://github.com/resistics/resistics"
documentation = "https://www.resistics.io"
keywords = [
    "geophysics",
    "magnetotellurics",
    "electromagnetic",
    "resistivity",
    "statistics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
]

[tool.poetry.urls]
"Source" = "https://github.com/resistics/resistics"
"Bug Tracker" = "https://github.com/resistics/resistics/issues"

[tool.poetry.dependencies]
python = ">=3.8.1,<=3.11"
numpy = ">=1.20.2"
scipy = ">=1.6.2"
pandas = ">=1.2.3"
lttbc = ">=0.2.1"
attotime = "0.2.3"
plotly = ">=5.9.0"
loguru = ">=0.5.3"
scikit-learn = ">=1.1.1"
pydantic = ">=1.8.1"
prettyprinter = ">=0.18.0"
PyYAML = ">=5.4.1"
tqdm = ">=4.61.0"
regressioninc = "^0.1.0a0"

[tool.poetry.group.shared.dependencies]
matplotlib = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
flake8 = "*"
flake8-builtins = "*"
flake8-docstrings = "*"
flake8-bandit = "*"
flake8-pytest-style = "*"
flake8-cognitive-complexity = "*"
flake8-expression-complexity = "*"
darglint = "*"

[tool.poetry.group.docs.dependencies]
Sphinx = "*"
furo = "*"
sphinx-gallery = "*"
sphinxext-opengraph = "*"
autodoc-pydantic = "*"
sphinx-copybutton = "*"
kaleido = "0.2.1"
ipython = "*"
nbformat = "*"
seedir = "*"
emoji = "*"

[tool.poetry.group.tests.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-html = "*"
mypy = "*"


[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.22.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
minversion = "6.0"
testpaths = ["resistics", "tests"]

[tool.coverage.paths]
source = ["resistics"]

[tool.coverage.run]
branch = true
source = ["resistics"]

[tool.coverage.report]
show_missing = false

[tool.coverage.html]
directory = "artifacts/coverage_html"

[tool.coverage.xml]
output = "coverage.xml"

[tool.black]
line-length = 88
target-version = ["py38"]
